--- a/flask-app/templates/index.html
+++ b/flask-app/templates/index.html
@@ -19,9 +19,9 @@
   </head>
   <body>
     <div class="container">
-      <h4>Cat Gif of the day</h4>
+      <h4>Gif of the day</h4>
       <img src="{{url}}" />
-      <p><small>Courtesy: <a href="http://www.buzzfeed.com/copyranter/the-best-cat-gif-post-in-the-history-of-cat-gifs">Buzzfeed</a></small></p>
+      <p><small>Courtesy: <a href="https://giphy.com/">Giphy</a></small></p>
     </div>
   </body>
 </html>
